--- a/style.scss
+++ b/style.scss
@@ -18,9 +18,9 @@ html {
 }
 
 body {
-	background: 85CBDB;
+	background: #BC1722;
   font: 18px/1.4 $helvetica;
-  color: $darkGray;
+  color: 85CBDB;
 }
 
 .container {
